[tool.poetry]
name = "cyan"
version = "24.3.0-alpha"
description = ""
authors = ["Sayan Chaudhry <sayan.chaudhry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cyan = 'cyan.main:main'
